[gd_scene load_steps=9 format=3 uid="uid://cpb2ewvt5407n"]

[ext_resource type="Theme" uid="uid://c3rh6o4o4o4bu" path="res://assets/fonts/themes/menu_button.tres" id="1_xmf4e"]
[ext_resource type="Script" path="res://scripts/world_menu.gd" id="1_yj5xx"]
[ext_resource type="StyleBox" uid="uid://cysqklup1v1ve" path="res://assets/fonts/styleboxes/button_pressed.tres" id="2_123vl"]
[ext_resource type="StyleBox" uid="uid://df2xcacdd4svj" path="res://assets/fonts/styleboxes/button_normal.tres" id="3_yiqwf"]
[ext_resource type="Shortcut" uid="uid://0ckqs6sqhd83" path="res://assets/button_shortcuts/escape_shortcut.tres" id="5_m75aj"]

[sub_resource type="Gradient" id="Gradient_6qdqt"]
colors = PackedColorArray(0, 0, 0, 0.392157, 0.741385, 0.741385, 0.741385, 0.392157)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oy2i5"]
frequency = 0.0005

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_en0jt"]
color_ramp = SubResource("Gradient_6qdqt")
noise = SubResource("FastNoiseLite_oy2i5")

[node name="WorldMenu" type="Control"]
custom_minimum_size = Vector2(1080, 720)
layout_mode = 3
anchor_left = 0.00185185
anchor_right = 1.00556
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yj5xx")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_en0jt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -198.0
offset_right = 181.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="BackToGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xmf4e")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_styles/hover_pressed = ExtResource("2_123vl")
theme_override_styles/hover = ExtResource("3_yiqwf")
theme_override_styles/pressed = ExtResource("2_123vl")
theme_override_styles/normal = ExtResource("3_yiqwf")
shortcut = ExtResource("5_m75aj")
shortcut_feedback = false
text = " Back to Game "

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xmf4e")
theme_override_colors/font_color = Color(0.654232, 0.654232, 0.654232, 1)
theme_override_styles/hover_pressed = ExtResource("2_123vl")
theme_override_styles/hover = ExtResource("3_yiqwf")
theme_override_styles/pressed = ExtResource("2_123vl")
theme_override_styles/normal = ExtResource("3_yiqwf")
text = "Main Menu"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xmf4e")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_styles/hover_pressed = ExtResource("2_123vl")
theme_override_styles/hover = ExtResource("3_yiqwf")
theme_override_styles/pressed = ExtResource("2_123vl")
theme_override_styles/normal = ExtResource("3_yiqwf")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_xmf4e")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_styles/hover_pressed = ExtResource("2_123vl")
theme_override_styles/hover = ExtResource("3_yiqwf")
theme_override_styles/pressed = ExtResource("2_123vl")
theme_override_styles/normal = ExtResource("3_yiqwf")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/BackToGame" to="." method="_on_back_to_game_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
